app/kubernetes/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-manager-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-manager-app
  template:
    metadata:
      annotations:
      labels:
        app: schema-manager-app
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: schema-manager
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: schema-manager-app
      volumes:
        - name: schema-manager-config-volume
          configMap:
            name: schema-manager-configmap
      containers:
        - name: schema-manager-app
          image: europe-west1-docker.pkg.dev/uk-cti-adtech-platform-test/schema-manager/schema-manager-app:${GIT_TAG}
          imagePullPolicy: Always
          ports:
            - name: app
              containerPort: 80
          volumeMounts:
            - name: schema-manager-config-volume
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
          resources:
            limits:
              memory: 500Mi
              cpu: 500m
            requests:
              memory: 100Mi
              cpu: 100m
