app/kubernetes/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: schema-manager-app
spec:
  selector:
    app: schema-manager-app
  ports:
    - name: app
      protocol: TCP
      port: 80
      targetPort: 80
